<resources>
    <string name="app_name">CityPass</string>

    <string name="title_home">Home</string>
    <string name="title_Printing">Print (Disabled)</string>
    <string name="title_student_records">Student Records</string>
    <string name="title_announcements">CanvasNews(Disabled)</string>
    <string name="title_my_calendar">My Calendar</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_useful_info">Useful Information</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>


    <string name="Monday"><b>Mon</b></string>
    <string name="Tuesday"><b>Tue</b></string>
    <string name="Wednesday"><b>Wed</b></string>
    <string name="Thursday"><b>Thu</b></string>
    <string name="Friday"><b>Fri</b></string>
    <string name="Saturday"><b>Sat</b></string>
    <string name="Sunday"><b>Sun</b></string>

    <string name="Event">Events / Public Holidays</string>
    <string name="Week">Week 1 - 3</string>
    <string name="not_available">This function no longer available.</string>
</resources>
